test: testado do DTO enviado no controller